@@ -41,7 +41,6 @@
 #define OPTION_DUMP_GRAPHS     "--dump-graphs"
 #define OPTION_MAX_ALLOCS_NODE "--max-allocs-per-node"
 #define OPTION_OLDRALLOC       "--oldralloc"
-#define OPTION_SALLOC          "--salloc"
 
 static char _z80_defaultRules[] = {
 #include "peeph.rul"
@@ -71,7 +70,6 @@ static OPTION _z80_options[] = {
   {0, OPTION_MAX_ALLOCS_NODE, &options.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
   {0, OPTION_DUMP_GRAPHS,     &z80_opts.dump_graphs, "Dump control flow graph, conflict graph and tree decomposition in register allocator"},
   {0, OPTION_OLDRALLOC,       &z80_opts.oldralloc, "Use old register allocator"},
-  {0, OPTION_SALLOC,          &z80_opts.salloc, "Choose stack allocator: 0 btree, 1 chaitin, 2 aligned chaitin, 3 simpl. th/k, 4 th/k", CLAT_INTEGER},
   {0, NULL}
 };
 
