@@ -48,6 +48,11 @@
 #include "SDCCbtree.h"
 #include "dbuf_string.h"
 
+#define SALLOC_CH (options.salloc == 1 || options.salloc == 2) // Chaitin
+#define SALLOC_CHA (options.salloc == 2) // Chaitin with alignment
+#define SALLOC_TD (options.salloc == 3 || options.salloc == 4)
+#define SALLOC_TDS (options.salloc == 3) // Simplified
+
 /* Flags to turn off optimisations.
  */
 enum
